fixed alignment error

--- a/css/styles.css
+++ b/css/styles.css
@@ -240,6 +240,7 @@ a {
     color: var(--primary);
     position: relative;
     background-position-y: center;
+    padding: 0px 0px 0px 10%;
     margin-top: 85px; 
 }
 
@@ -260,30 +261,11 @@ a {
     font-weight: lighter;
     width: 70%;
     text-align: center;
-    top: 100%;
+    position: absolute;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    opacity: 0;
-    animation: fade-in 0.9s cubic-bezier(0.3, 0, 0.2, 1) forwards;
 }
-  
-@keyframes fade-in {
-    0% {
-      top: 100%;
-      opacity: 0;
-    }
-    40% {
-      opacity: 0;
-    }
-    80% {
-        opacity: 0.4;
-      }
-    100% {
-      top: 50%;
-      opacity: 1;
-    }
-}
-   
 
 .hero-secondary h1,
 .hero-third h1 {
